# mycv

./: .gitignore  CMakeLists.txt
include/Image/: Image.h
lib/image/: Image.cpp
src/image/: image.cpp
